# ShredX

./: .gitignore  Cargo.toml  README.md  RELEASE_SUMMARY.md
config/: .env  config.json
data/certificates/: certificate_report_testing_20250927_055554.txt  certificate_report_testing_20250927_065738.txt  certificate_testing_20250927_055554.json  certificate_testing_20250927_065738.json
data/reports/: sanitization_report_20250927_122744.txt
data/users/: users.json
docs/: PROJECT_ORGANIZATION.md  SHREDX_UPDATE_PLAN.md
docs/guides/: COMPLETE_SETUP_GUIDE.md  GITHUB_RELEASE_GUIDE.md  TROUBLESHOOTING.md
releases/: STANDALONE_RELEASE_v1.0.1.md
releases/v1.0.0-windows/: LICENSE  README.txt  RELEASE_NOTES.md  config.json  install.bat
releases/v1.0.1-standalone/: LICENSE  README.txt  config.json  install-standalone.bat  launch.bat
scripts/testing/: test_integration.sh  test_server_setup.sh
src/: app_config.rs  ata_commands.rs  auth.rs  certificate.rs  examples.rs  main.rs  sanitization.rs  server_client.rs
src/devices/nvme/: mod.rs
src/devices/sdcard/: mod.rs
src/devices/usb/: mod.rs
src/server/: api.rs  dashboard.html  database.rs  database_original.rs  models.rs
src/ui/: auth.rs  mod.rs  widgets.rs
