[package]
name = "hdd_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29"   # egui + app framework
rand = "0.8"      # for cryptographic random data generation
chrono = { version = "0.4", features = ["serde"] }  # for timestamps in certificates
num_cpus = "1.16"  # for optimal thread count detection
rayon = "1.8"      # for parallel processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rsa = "0.9"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
printpdf = "0.6"
hex = "0.4"
ring = "0.17"
x509-parser = "0.15"
webbrowser = "0.8"

# Server and Database dependencies
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.3", optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.0"

[features]
default = []
server = ["warp", "sqlx"]

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Ioctl",
] }

[target.'cfg(unix)'.dependencies]
nix = "0.29"      # for Linux/Unix syscalls
libc = "0.2"      # for system calls
sysinfo = "0.30"  # for system information

# Bundle configuration for Linux releases
[package.metadata.bundle]
name = "HDD Tool"
identifier = "com.sih.hdd-tool"
version = "0.1.0"
# icon = ["resources/logo.png"]
category = "Utility"
short_description = "NIST SP 800-88 compliant disk sanitization tool"
long_description = "HDD Tool is a cross-platform disk sanitization utility that provides NIST SP 800-88 compliant data erasure for HDDs, SSDs, NVMe drives, USB storage, and SD cards."
copyright = "Copyright © 2025 SIH Team"
authors = "SIH Team"
homepage = "https://github.com/riteshvijaykumar/HDD-Tool"
license_file = "LICENSE"

# Additional binaries
[[bin]]
name = "hdd-tool-server"
path = "src/bin/server.rs"
required-features = ["server"]



[[bin]]
name = "hdd-tool"
path = "src/main.rs"